--- a/public/src/app/snackingdojo/snackingdojo.component.css
+++ b/public/src/app/snackingdojo/snackingdojo.component.css
@@ -26,7 +26,7 @@
       -ms-flex-align: left;
           align-items: left;
   margin: 5px;
-  padding: 0 0 15px 0;
+  padding: 0 0 0px 0;
   width: 150px;
   background: fff;
 box-shadow: 0 1px 2px rgba(0,0,0,0.15)}
@@ -50,46 +50,7 @@ box-shadow: 0 1px 2px rgba(0,0,0,0.15)}
   -webkit-transition: all 0.15s;
   transition: all 0.15s;
 }
-/*.card__image:hover .image-overlay {
-  background-color: rgba(35, 155, 55, 0.33);
-  -webkit-transition: all 0.15s;
-  transition: all 0.15s;
-}
-.card__image:after {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  bottom: -4em;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  font-family: "FontAwesome";
-  font-size: 1em;
-  text-align: center;
-  content: "\f00c";
-  color: rgba(255, 255, 255, 0);
-  color: #fff;
-  -webkit-transition: all 0.15s;
-  transition: all 0.15s;
-}
-.card__image .image-overlay {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 85px;
-  top: 0;
-  left: 0;
-  content: "";
-  background-color: rgba 255, 255, 255, 0;
-  -webkit-transition: backgroundColor, 0.15s;
-  transition: backgroundColor, 0.15s;
-}*/
+
 .card__image img {
   display: block;
   width: 100%;
@@ -123,4 +84,39 @@ button {
 .card__description{
     text-align: center;
     font-size: 10px;
+    height: 65px;
+    font-family: Arial, Helvetica, sans-serif; 
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+.card-social {
+  position: relative;
+  height: 25px;
+  width: 150px;
+  background: red;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  background: rgba(0, 0, 0, 0.6);
+  top: 0px;
+}
+.card-social ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.card-social ul li {
+  height: 100%;
+  text-align: center;
+  line-height: 25px;
+  font-size: 0.8em;
+  color: rgba(255, 255, 255, 0.85);
+  font-family: Arial, Helvetica, sans-serif;
 }
