--- a/public/src/app/snackingdojo/snackingdojo.component.css
+++ b/public/src/app/snackingdojo/snackingdojo.component.css
@@ -85,6 +85,7 @@ button {
     text-align: center;
     font-size: 10px;
     height: 65px;
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif; 
 }
 
