--- a/public/src/app/snackingdojo/snackingdojo.component.html
+++ b/public/src/app/snackingdojo/snackingdojo.component.html
@@ -2,17 +2,17 @@
   <h2>Welcome</h2>
 </div>
 <div id="foodwrapper">
-  <div class="card make-it-slow" *ngFor = "let item of items">
+  <div class="card make-it-slow" *ngFor = "let item of productList">
       <img class="card__image" src="{{item.img}}" alt="">
     <div class="card__description">
      <p>{{item.name}}</p>
     </div>
     <div class="card__actions card-social">
       <ul>
-        <li><a href="#"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
+        <li><a (click)="vote({product_id: item._id, user_id: '59526e587339d656a96aad22', value: 1})"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
         </li>
-        <li class="points">50</li>
-        <li><a href="#"><i class="fa fa-angle-down" aria-hidden="true"></i></a>
+        <li class="points">{{item.votes}}</li>
+        <li><a (click)="vote({product_id: item._id, user_id: '59526e587339d656a96aad22', value: 0})"><i class="fa fa-angle-down" aria-hidden="true"></i></a>
         </li>
       </ul>
       <!--<button class="uvote" type="">Up Vote</button>
