--- a/public/src/app/snackingdojo/snackingdojo.component.html
+++ b/public/src/app/snackingdojo/snackingdojo.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h2>Welcome {{user.name}}</h2>
+  <h2>Welcome {{user?.username}}</h2>
 </div>
 <div id="foodwrapper">
   <div class="card make-it-slow" *ngFor = "let item of productList">
