--- a/public/src/app/snackingdojo/snackingdojo.component.html
+++ b/public/src/app/snackingdojo/snackingdojo.component.html
@@ -1,5 +1,8 @@
-<div>
-  <h2>Welcome {{user?.username}}</h2>
+<div *ngIf = "user">
+  <h2 style="display: inline-block">Welcome {{user?.username}}</h2><a href="/logout"><button>Logout</button></a>
+</div>
+<div *ngIf="!user">
+  <h2 style="display: inline-block">Login to vote</h2><a href="/auth/github"><button>Login</button></a>
 </div>
 <div id="foodwrapper">
   <div class="card make-it-slow" *ngFor = "let item of productList">
@@ -9,10 +12,10 @@
     </div>
     <div class="card__actions card-social">
       <ul>
-        <li><a  (click)="vote({product_id: item._id, github_id: githubUser.id, value: 1})"><i  [ngClass]="{'down-voted': productsUserLikes.includes(item._id)}" class="fa fa-angle-up" aria-hidden="true"></i></a>
+        <li><a  (click)="vote({product_id: item._id, value: 1})"><i  [ngClass]="{'down-voted': productsUserLikes.includes(item._id)}" class="fa fa-angle-up" aria-hidden="true"></i></a>
         </li>
         <li class="points" >{{item.votes}}</li>
-        <li><a (click)="vote({product_id: item._id, github_id: githubUser.id, value: 0})"><i [ngClass]="{'up-voted': productsUserDislikes.includes(item._id)}" class="fa fa-angle-down" aria-hidden="true"></i></a>
+        <li><a (click)="vote({product_id: item._id, value: 0})"><i [ngClass]="{'up-voted': productsUserDislikes.includes(item._id)}" class="fa fa-angle-down" aria-hidden="true"></i></a>
         </li>
       </ul>
       <!--<button class="uvote" type="">Up Vote</button>
