--- a/public/src/app/snackingdojo/snackingdojo.component.html
+++ b/public/src/app/snackingdojo/snackingdojo.component.html
@@ -5,10 +5,10 @@
   <h2 style="display: inline-block">Login to vote</h2><a href="/auth/github"><button>Login</button></a>
 </div>
 <div class="searchbar">
-
+<p>Search : <input type="text" name="search" value="" [(ngModel)]="search"></p>
 </div>
 <div id="foodwrapper">
-  <div class="card make-it-slow" *ngFor = "let item of productList">
+  <div class="card make-it-slow" *ngFor = "let item of productList | search: search">
       <img class="card__image" src="{{item.img}}" alt="">
     <div class="card__description" >
      <p >{{item.name}}</p>
