--- a/public/src/app/snackingdojo/details/details.component.html
+++ b/public/src/app/snackingdojo/details/details.component.html
@@ -1,3 +1,23 @@
-<p>
-  details works!
-</p>
+<div class="productinfo">
+  
+    <div class="itemimg">
+    <img src="https://d2d8wwwkmhfcva.cloudfront.net/250x/filters:fill(FFF,true):format(jpg)/d2lnr5mha7bycj.cloudfront.net/product-image/file/large_b10aba7b-a389-4ef7-9c09-e66d740bdbc6.jpg" alt="">
+    </div>
+
+    <div class="productdesc">
+      <h3>Product Name</h3>
+      <hr>
+      <h4>Votes: 10</h4>
+      <h4>Rank: 4th</h4>
+    </div>
+
+    <div class="comments">
+    <h5>Tell the Dojo what you think of these snacks</h5>
+    <form>
+    <textarea rows="4" cols="50"> 
+    </textarea> 
+    <input type="submit" name="submit" value="Snack Comment">   
+    </form>
+    </div>
+</div>
+
