--- a/public/src/app/snackingdojo/snackingdojo.component.html
+++ b/public/src/app/snackingdojo/snackingdojo.component.html
@@ -30,7 +30,7 @@
 <div id="foodwrapper">
 <md-card class="example-card" *ngFor = "let item of productList | search: search">
   <md-card-header>
-    <div md-card-avatar class="example-header-image"><p>1</p></div>
+    <div md-card-avatar class="example-header-image"><p>{{item.votes}}</p></div>
     <md-card-title>{{item.name}}</md-card-title>
   </md-card-header>
   <img md-card-image src="{{item.img}}">
