--- a/public/src/app/snackingdojo/snackingdojo.component.html
+++ b/public/src/app/snackingdojo/snackingdojo.component.html
@@ -34,7 +34,7 @@
     <md-card-title>{{item.name}}</md-card-title>
   </md-card-header>
   <img md-card-image src="{{item.img}}">
-  <md-card-subtitle>Category</md-card-subtitle>
+  <md-card-subtitle *ngIf = "item.category">Category</md-card-subtitle>
   <!--<md-card-content>
     <p>
       The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
