--- a/public/src/app/snackingdojo/details/details.component.html
+++ b/public/src/app/snackingdojo/details/details.component.html
@@ -1,14 +1,14 @@
-<div class="productinfo">
+<div class="productinfo" *ngIf="product">
   
     <div class="itemimg">
-    <img src="https://d2d8wwwkmhfcva.cloudfront.net/250x/filters:fill(FFF,true):format(jpg)/d2lnr5mha7bycj.cloudfront.net/product-image/file/large_b10aba7b-a389-4ef7-9c09-e66d740bdbc6.jpg" alt="">
+    <img src="{{product.img}}" alt="">
     </div>
 
     <div class="productdesc">
-      <h3>Product Name</h3>
+      <h3>{{product?.name}}</h3>
       <hr>
-      <h4>Votes: 10</h4>
-      <h4>Rank: 4th</h4>
+      <h4>Votes: {{product?.votes}}</h4>
+
     </div>
 
     <div class="comments">
