--- a/public/src/app/snackingdojo/snackingdojo.component.html
+++ b/public/src/app/snackingdojo/snackingdojo.component.html
@@ -15,7 +15,10 @@
     </div>
   </div>
   <span class="spacer"></span>
-  <a href="/logout"><button md-button>Logout</button></a>
+  <a href="/logout">
+    <span class="fa fa-sign-out"></span>
+    <p style="display:inline">Sign out</p>
+  </a>
   <img *ngIf="user.img" src="{{user.img}}" style="width: 50px;margin-left: 10px;border-radius:100px">
 </md-toolbar>
 <md-toolbar *ngIf="!user">
@@ -31,20 +34,19 @@
   </div>
   <span class="spacer"></span>
   <a href="/auth/github" class="myButton">
-    <button >Login</button>
+    <span class="fa fa-sign-in"></span>
+    <p style="display:inline">&nbsp;Sign in</p>
   </a>
 </md-toolbar>
-
-
-  <div id="foodwrapper">
-    <md-card class="example-card" *ngFor="let item of productList | search: search">
+  <div id="foodwrapper" >
+    <md-card class="example-card" *ngFor="let item of productList | search: search" >
       <md-card-header>
         <div md-card-avatar class="example-header-image">
           <p>{{item.votes}}</p>
         </div>
         <md-card-title>{{item.name | truncate: 50}}</md-card-title>
       </md-card-header>
-      <img md-card-image src="{{item.img}}">
+      <img md-card-image src="{{item.img}}" (click)="openItem(item._id)">
       <md-card-subtitle *ngIf="item.category">Category</md-card-subtitle>
       <md-card-actions>
         <div class="VoteButtons">
