--- a/public/src/app/snackingdojo/details/details.component.css
+++ b/public/src/app/snackingdojo/details/details.component.css
@@ -1,7 +1,5 @@
 
-.productinfo {
 
-}
 .itemimg {
   position: relative;
   width: 100%;
@@ -61,4 +59,13 @@ hr {
     border-top: 1px solid black;
     margin: 1em 0;
     padding: 0;
+}
+.thumbnail:hover {
+    position:relative;
+    top:-25px;
+    left:-35px;
+    width:300px;
+    height:auto;
+    display:block;
+    z-index:999;
 }
