--- a/public/src/app/snackingdojo/details/details.component.html
+++ b/public/src/app/snackingdojo/details/details.component.html
@@ -10,7 +10,7 @@
       <h3>{{product?.name}}</h3>
       <hr>
       <h4>Votes: {{product?.votes}}</h4>
-      <h4>Comments: {{product?.comments.length}}</h4>
+      <h4>Comments: {{product?.comments?.length}}</h4>
 
     </div>
 
