--- a/public/src/app/snackingdojo/details/details.component.html
+++ b/public/src/app/snackingdojo/details/details.component.html
@@ -21,8 +21,9 @@
         <button [disabled] = "!githubUser">Submit Comment</button>   
       </form>
       <div class="comment" *ngFor="let comment of product.comments">
-        <img style="width: 50px" src="{{comment._user?.img}}"><p style="display: inline">{{comment._user?.username}}: </p>
-        <p>{{comment.comment}} {{comment.createdAt}}</p>
+        <img style="width: 50px" src="{{comment._user?.img}}"><p style="display: inline">{{comment._user?.username}} {{comment.createdAt | date: "medium"}}</p>
+        <p>{{comment.comment}}</p>
+        <hr>
       </div>
     </div>
 </div>
