added date formats

--- a/public/src/app/snackingdojo/details/details.component.html
+++ b/public/src/app/snackingdojo/details/details.component.html
@@ -21,7 +21,10 @@
         <button [disabled] = "!githubUser">Submit Comment</button>   
       </form>
       <div class="comment" *ngFor="let comment of product.comments">
-        <img style="width: 50px" src="{{comment._user?.img}}"><p style="display: inline">{{comment._user?.username}} {{comment.createdAt | date: "medium"}}</p>
+        <img style="width: 50px; border-radius: 50%" src="{{comment._user?.img}}">
+        <div style="display: inline-block; vertical-align: top; margin-left: 10px">
+        <p>{{comment._user?.username}} -- {{comment.createdAt | date: "MMM d h:mm a"}}</p>
+        </div>
         <p>{{comment.comment}}</p>
         <hr>
       </div>
