--- a/public/src/app/snackingdojo/details/details.component.css
+++ b/public/src/app/snackingdojo/details/details.component.css
@@ -1,41 +1,43 @@
 
 .productinfo {
-
+  font-family: sans-serif;
 }
 .itemimg {
   position: relative;
   width: 100%;
   display: block;
-  max-width: 250px;
-  height: 250px;
+  max-width: 400px;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
   overflow: hidden;
-  background-color: yellow;
-  margin: 20px;
   display: inline-block;
 }
+.itemimg img {
+  width: 100%
+}
 .productdesc {
-    margin-top: 20px;
-    margin-left: 85px;
+    width: 100%;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    /*font-family: Arial, Helvetica, sans-serif;*/
     display: inline-block;
     vertical-align: top;
 }
 .comments {
-    margin: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 500px;
+    /*margin: 20px;*/
+    /*font-family: Arial, Helvetica, sans-serif;*/
+    width: 100%;
+    height: 580px;
+    overflow-x: hidden;
+    overflow-y: auto;
 
 }
-
+/*
 textarea {
  width: 480px;
  height: 50px;
  font: normal 10px verdana;
  border: solid 1px black;
-}
+}*/
 input[type=submit] {
     background-color: white;
     border: 1px solid black;
@@ -61,4 +63,123 @@ hr {
     border-top: 1px solid black;
     margin: 1em 0;
     padding: 0;
+}
+
+
+
+.group 			  {
+  position:relative;
+  margin-bottom:-5px;
+  width: 300px;
+}
+input 				{
+  background: white;
+  font-size:18px;
+  padding:10px 10px 10px 5px;
+  display:block;
+  width:100%;
+  border:none;
+  border-bottom:1px solid #4fab4f;
+}
+input:focus 		{ outline:none; }
+
+/* LABEL ======================================= */
+label 				 {
+  color:#4fab4f;
+  font-size:18px;
+  font-weight:normal;
+  position:absolute;
+  pointer-events:none;
+  left:5px;
+  top:10px;
+  transition:0.2s ease all;
+  -moz-transition:0.2s ease all;
+  -webkit-transition:0.2s ease all;
+}
+
+/* active state */
+input:focus ~ label, input:valid ~ label 		{
+  top:-20px;
+  font-size:14px;
+  color:#4fab4f;
+}
+
+/* BOTTOM BARS ================================= */
+.bar 	{
+  position:relative;
+  display:block;
+  width:calc(100% + 15px);
+}
+.bar:before, .bar:after 	{
+  content:'';
+  height:2px;
+  width:0;
+  bottom:1px;
+  position:absolute;
+  background:#4fab4f;
+  transition:0.2s ease all;
+  -moz-transition:0.2s ease all;
+  -webkit-transition:0.2s ease all;
+}
+.bar:before {
+  left:50%;
+}
+.bar:after {
+  right:50%;
+}
+
+/* active state */
+input:focus ~ .bar:before, input:focus ~ .bar:after {
+  width:50%;
+}
+
+/* HIGHLIGHTER ================================== */
+.highlight {
+  position:absolute;
+  height:60%;
+  width:100px;
+  top:25%;
+  left:0;
+  pointer-events:none;
+  opacity:0.5;
+}
+
+/* active state */
+input:focus ~ .highlight {
+  -webkit-animation:inputHighlighter 0.3s ease;
+  -moz-animation:inputHighlighter 0.3s ease;
+  animation:inputHighlighter 0.3s ease;
+}
+
+/* ANIMATIONS ================ */
+@-webkit-keyframes inputHighlighter {
+	from { background:#4fab4f; }
+  to 	{ width:0; background:transparent; }
+}
+@-moz-keyframes inputHighlighter {
+	from { background:#4fab4f; }
+  to 	{ width:0; background:transparent; }
+}
+@keyframes inputHighlighter {
+	from { background:#4fab4f; }
+  to 	{ width:0; background:transparent; }
+}
+
+.left, .right {
+  display: inline-block;
+  width: 49%;
+  height: 650px;
+  vertical-align: top;
+  margin: 0;
+  min-width: 433px;
+  color: #2E7D32;
+}
+.mat-toolbar{
+  margin: -25px -25px 20px !important;
+  width: 105.55%;
+  background: #4fab4f;
+  color: white
+}
+.mat-dialog-container{
+  overflow: hidden !important;
 }
