--- a/public/src/app/snackingdojo/details/details.component.html
+++ b/public/src/app/snackingdojo/details/details.component.html
@@ -31,7 +31,7 @@
     <div class="comments">
       <div class="comment" *ngFor="let comment of product.comments">
         <img style="width: 50px" src="{{comment._user?.img}}">
-        <p style="display: inline">{{comment._user?.username}}: </p>
+        <p style="display: inline">{{comment._user?.username}}: {{comment.createdAt}}</p>
         <p>{{comment.comment}}</p>
       </div>
     </div>
