html and css updates

--- a/public/src/app/snackingdojo/details/details.component.css
+++ b/public/src/app/snackingdojo/details/details.component.css
@@ -77,6 +77,10 @@ hr {
     background-color: #eee;
 }
 
+.comment {
+    padding: 15px 0 0 15px;
+}
+
 
 
 .group 			  {
@@ -194,4 +198,21 @@ input:focus ~ .highlight {
 }
 .mat-dialog-container{
   overflow: hidden !important;
+}
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #eee;
+    margin: 1em 0;
+    padding: 0; 
+}
+
+.right {
+    border-left: 1px solid #eee;
+}
+
+.comment span{
+    color: #aaa;
+    font-size: 15px;
 }
