--- a/public/src/app/snackingdojo/snackingdojo.component.html
+++ b/public/src/app/snackingdojo/snackingdojo.component.html
@@ -55,7 +55,7 @@
           </div>
           <div class="halfWidthButton">
             <span>&nbsp;</span>
-            <i style="color: green" class="fa fa-comment comment-icon" aria-hidden="true"><span>{{item.comments.length}}</span></i>
+            <i style="color: #4fab4f" class="fa fa-comment comment-icon" aria-hidden="true"><span>{{item.comments.length}}</span></i>
           </div>
           <div class="halfWidthButton">
             <a (click)="vote({product_id: item._id, value: 0})"><i [ngClass]="{'down-voted': productsUserDislikes.includes(item._id)}" class="fa fa-arrow-circle-down" aria-hidden="true"></i></a>
