changed cursor style for comments/votes

--- a/public/src/app/snackingdojo/snackingdojo.component.css
+++ b/public/src/app/snackingdojo/snackingdojo.component.css
@@ -287,3 +287,6 @@ input:focus ~ .highlight {
       top: -6px;
       
 }
+.comment-icon, .fa-arrow-circle-down, .fa-arrow-circle-up, img{
+  cursor: pointer;
+}
