--- a/public/src/app/snackingdojo/snackingdojo.component.html
+++ b/public/src/app/snackingdojo/snackingdojo.component.html
@@ -1,9 +1,9 @@
-
 <div class="loaderFull">
   <div class="loaderIcon"></div>
 </div>
 
 <md-toolbar *ngIf="user">
+  <img src="../assets/favicon.png" alt="" class="snackIcon">
   <span>Welcome,  {{user?.username}}</span>
   <span class="spacer"></span>
   <div class="searchbar">
@@ -22,6 +22,7 @@
   <img *ngIf="user.img" src="{{user.img}}" style="width: 50px;margin-left: 10px;border-radius:100px">
 </md-toolbar>
 <md-toolbar *ngIf="!user">
+  <img src="../assets/favicon.png" alt="" class="snackIcon">
   <span>Login to vote</span>
   <span class="spacer"></span>
   <div class="searchbar">
@@ -38,33 +39,33 @@
     <p style="display:inline">&nbsp;Sign in</p>
   </a>
 </md-toolbar>
-  <div id="foodwrapper" >
-    <md-card class="example-card" *ngFor="let item of productList | search: search" >
-      <md-card-header>
-        <div md-card-avatar class="example-header-image">
-          <p>{{item.votes}}</p>
+<div id="foodwrapper">
+  <md-card class="example-card" *ngFor="let item of productList | search: search">
+    <md-card-header>
+      <div md-card-avatar class="example-header-image">
+        <p>{{item.votes}}</p>
+      </div>
+      <md-card-title>{{item.name | truncate: 35}}</md-card-title>
+    </md-card-header>
+    <img md-card-image src="{{item.img}}" (click)="openItem(item._id)">
+    <md-card-subtitle *ngIf="item.category">Category</md-card-subtitle>
+    <md-card-actions>
+      <div class="VoteButtons">
+        <div class="halfWidthButton">
+          <a (click)="vote({product_id: item._id, value: 1})"><i  [ngClass]="{'up-voted': productsUserLikes.includes(item._id)}" class="fa fa-arrow-circle-up" aria-hidden="true"></i></a>
         </div>
-        <md-card-title>{{item.name | truncate: 35}}</md-card-title>
-      </md-card-header>
-      <img md-card-image src="{{item.img}}" (click)="openItem(item._id)">
-      <md-card-subtitle *ngIf="item.category">Category</md-card-subtitle>
-      <md-card-actions>
-        <div class="VoteButtons">
-          <div class="halfWidthButton">
-            <a (click)="vote({product_id: item._id, value: 1})"><i  [ngClass]="{'up-voted': productsUserLikes.includes(item._id)}" class="fa fa-arrow-circle-up" aria-hidden="true"></i></a>
-          </div>
-          <div class="halfWidthButton">
-            <span>&nbsp;</span>
-            <i style="color: #4fab4f" class="fa fa-comment comment-icon" aria-hidden="true"><span>{{item.comments.length}}</span></i>
-          </div>
-          <div class="halfWidthButton">
-            <a (click)="vote({product_id: item._id, value: 0})"><i [ngClass]="{'down-voted': productsUserDislikes.includes(item._id)}" class="fa fa-arrow-circle-down" aria-hidden="true"></i></a>
-          </div>
+        <div class="halfWidthButton">
+          <span>&nbsp;</span>
+          <i style="color: #4fab4f" class="fa fa-comment comment-icon" aria-hidden="true"><span>{{item.comments.length}}</span></i>
         </div>
-      </md-card-actions>
-    </md-card>
-  </div>
+        <div class="halfWidthButton">
+          <a (click)="vote({product_id: item._id, value: 0})"><i [ngClass]="{'down-voted': productsUserDislikes.includes(item._id)}" class="fa fa-arrow-circle-down" aria-hidden="true"></i></a>
+        </div>
+      </div>
+    </md-card-actions>
+  </md-card>
+</div>
 
 <div style="color: black; font-family: sans-serif; text-align: center; width: 100%">
-  <span>© 2017 SnackingDojo · All Rights Reserved</span>  
+  <span>© 2017 SnackingDojo · All Rights Reserved</span>
 </div>
