--- a/public/src/app/admin/admin.component.html
+++ b/public/src/app/admin/admin.component.html
@@ -1,14 +1,20 @@
+<md-toolbar>
+  <span>Welcome Admin</span>
+</md-toolbar>
 <table>
   <thead>
     <tr>
-      <th>Products</th>
+      <th>Image</th>
+      <th>Product</th>
       <th>Votes</th>
       <th>Comments</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td></td>
+      <td>Hi</td>
+      <td>Hello</td>
+      <td>Goby</td>
     </tr>
   </tbody>
 </table>
