Updated Admin Page

--- a/public/src/app/admin/admin.component.html
+++ b/public/src/app/admin/admin.component.html
@@ -4,6 +4,7 @@
 <table>
   <thead>
     <tr>
+      <th>Id</th>
       <th>Image</th>
       <th>Product</th>
       <th>Votes</th>
@@ -11,10 +12,12 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>Hi</td>
-      <td>Hello</td>
-      <td>Goby</td>
+    <tr *ngFor = "let item of productList; let i = index">
+      <td *ngIf = "i < 10">{{i + 1}}</td>
+      <td *ngIf = "i < 10"><img src="{{item.img}}" alt=""></td>
+      <td *ngIf = "i < 10">{{item.name}}</td>
+      <td *ngIf = "i < 10">{{item.votes}}</td>
+      <td *ngIf = "i < 10">{{item.comments.length}}</td>
     </tr>
   </tbody>
 </table>
