--- a/public/src/app/admin/admin.component.css
+++ b/public/src/app/admin/admin.component.css
@@ -11,11 +11,13 @@ th {
     text-align: left;
     background-color: #4CAF50;
     color: white;
+    font-family: sans-serif;
 }
 
 td {
     height: 50px;
     vertical-align: middle;
+    font-family: sans-serif;
 }
 
 th, td {
@@ -28,7 +30,9 @@ tr:hover {
 }
 
 tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #ffffff;
 }
 
-
+img {
+  width: 100px;
+}
