--- a/public/src/app/admin/admin.component.css
+++ b/public/src/app/admin/admin.component.css
@@ -33,6 +33,10 @@ tr:nth-child(even) {
     background-color: #ffffff;
 }
 
+tr:nth-child(odd) {
+    background-color: #ccc;
+}
+
 img {
   width: 100px;
 }
