--- a/public/src/app/admin/admin.component.html
+++ b/public/src/app/admin/admin.component.html
@@ -13,11 +13,11 @@
   </thead>
   <tbody>
     <tr *ngFor = "let item of productList; let i = index">
-      <td *ngIf = >{{i + 1}}</td>
-      <td *ngIf = ><img src="{{item.img}}" alt=""></td>
-      <td *ngIf = >{{item.name}}</td>
-      <td *ngIf = >{{item.votes}}</td>
-      <td *ngIf = >{{item.comments.length}}</td>
+      <td>{{i + 1}}</td>
+      <td><img src="{{item.img}}" alt=""></td>
+      <td>{{item.name}}</td>
+      <td>{{item.votes}}</td>
+      <td>{{item.comments.length}}</td>
     </tr>
   </tbody>
 </table>
