--- a/public/src/app/admin/admin.component.html
+++ b/public/src/app/admin/admin.component.html
@@ -1,6 +1,9 @@
 <md-toolbar>
   <span>Welcome Admin</span>
 </md-toolbar>
+
+<a href="/"><button (click)="reset()">Reset Votes</button></a>
+
 <table>
   <thead>
     <tr>
@@ -12,7 +15,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor = "let item of productList; let i = index">
+    <tr *ngFor = "let item of shortList; let i = index">
       <td>{{i + 1}}</td>
       <td><img src="{{item.img}}" alt=""></td>
       <td>{{item.name}}</td>
