--- a/public/src/app/admin/admin.component.html
+++ b/public/src/app/admin/admin.component.html
@@ -10,6 +10,8 @@
       <th>Id</th>
       <th>Image</th>
       <th>Product</th>
+      <th>Category</th>
+      <th>Price</th>
       <th>Votes</th>
       <th>Comments</th>
     </tr>
@@ -19,6 +21,8 @@
       <td>{{i + 1}}</td>
       <td><img src="{{item.img}}" alt=""></td>
       <td>{{item.name}}</td>
+      <td>{{item.category}}</td>
+      <td>{{item.price}}</td>
       <td>{{item.votes}}</td>
       <td>{{item.comments.length}}</td>
     </tr>
