--- a/public/src/app/snackingdojo/snackingdojo.component.html
+++ b/public/src/app/snackingdojo/snackingdojo.component.html
@@ -79,7 +79,7 @@
       <md-card-title>{{item.name | truncate: 35}}</md-card-title>
     </md-card-header>
     <img md-card-image src="{{item.img}}" (click)="openItem(item._id)">
-    <md-card-subtitle *ngIf="item.category">{{item.category}}</md-card-subtitle>
+    <md-card-subtitle *ngIf="item.subcategory">{{item.subcategory}}</md-card-subtitle>
     <md-card-actions>
       <div class="VoteButtons">
         <div class="halfWidthButton">
